[gd_scene load_steps=4 format=2]

[ext_resource path="res://Stations/TimerClickMinigame/ConnectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stations/StationScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://ConnectionSystem.gd" type="Script" id=3]

[node name="ConnectionScreen" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="NodeHolder" type="Node2D" parent="." index="1"]
position = Vector2( 510, 300 )
scale = Vector2( 0.559622, 0.588235 )

[node name="ConnectNode2" parent="." index="2" instance=ExtResource( 1 )]
position = Vector2( 187.228, 452.202 )

[node name="ConnectNode" parent="." index="3" instance=ExtResource( 1 )]
position = Vector2( 185.641, 169.774 )

[node name="ConnectNode3" parent="." index="4" instance=ExtResource( 1 )]
position = Vector2( 185.641, 378.455 )

[node name="ConnectNode4" parent="." index="5" instance=ExtResource( 1 )]
position = Vector2( 184.054, 238.001 )

[node name="ConnectNode5" parent="." index="6" instance=ExtResource( 1 )]
position = Vector2( 187.228, 531.536 )

[node name="ConnectNode6" parent="." index="7" instance=ExtResource( 1 )]
position = Vector2( 184.054, 304.642 )

[node name="ConnectNode12" parent="." index="8" instance=ExtResource( 1 )]
position = Vector2( 628.323, 439.509 )

[node name="ConnectNode11" parent="." index="9" instance=ExtResource( 1 )]
position = Vector2( 626.736, 157.081 )

[node name="ConnectNode10" parent="." index="10" instance=ExtResource( 1 )]
position = Vector2( 626.736, 365.762 )

[node name="ConnectNode9" parent="." index="11" instance=ExtResource( 1 )]
position = Vector2( 625.15, 225.308 )

[node name="ConnectNode8" parent="." index="12" instance=ExtResource( 1 )]
position = Vector2( 628.323, 518.843 )

[node name="ConnectNode7" parent="." index="13" instance=ExtResource( 1 )]
position = Vector2( 625.15, 291.948 )

[node name="LineConnection" type="Line2D" parent="." index="14"]
points = PoolVector2Array( 0, 0, 0, 0 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
